--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:exported="false" />
         <activity
             android:name=".RegisterPage"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LogInPage"
             android:exported="false" />
